--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-dark">
     <script src="./script.js"></script>
-    <h1 class="mx-3 my-3">Squad Bingo (Comp)</h1>
+    <h1 class="mx-3 my-3 text-light">Squad Bingo (Comp)</h1>
     <br>
     <h1 id="bingo" class="text-success text-center d-none">Bingo!</h1>
     <br>
